fix: add a jump for joinApply, modify the display of memberInfo

--- a/src/modules/setting/components/personalAttention/personalAttention.css
+++ b/src/modules/setting/components/personalAttention/personalAttention.css
@@ -27,7 +27,3 @@
     height: 63px;
     vertical-align: middle;
 }
-.personalAttention-tip{
-    text-align: center;
-    color: rgb(133, 131, 131);
-}
