--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -257,3 +257,7 @@ input[type="checkbox"]:checked + label::after {
   width:0;
   height: 0;
 }
+.noneInfoTip{
+  text-align: center;
+  color: rgb(133, 131, 131);
+}
